<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/password_dialog_padding_strat"
        android:paddingTop="20dp"
        android:textColor="@color/password_title_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/password_dialog_padding_strat"
        android:paddingTop="5dp"
        android:paddingBottom="15dp"
        android:text="@string/wifi_password"
        android:textColor="@color/wifi_summary_color"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPasswordBackground"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/password_title_color"
            android:paddingBottom="15dp"
            android:paddingLeft="21dp"
            android:paddingRight="51dp"
            android:paddingTop="15dp" />

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="24dp"
            android:padding="8dp"
            android:src="@drawable/password_show" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="37dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/password_dialog_button_margin_left"
            android:layout_marginRight="@dimen/password_dialog_button_margin_right" >

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="1dp"
                android:text="@string/cancel_text"
                android:textColor="@color/password_cancle_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="1dp"
                android:text="@string/connect_text"
                android:textColor="@color/password_connect_color"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>